# spectral-convolution-plugin

./: CMakeLists.txt
src/: FreqDomainConvolver.cpp  FreqDomainConvolver.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TimeDomainConvolver.cpp  TimeDomainConvolver.h
